Refactor vector search performance tests to JMH benchmarks
- Removed old performance test classes `SearchPerformanceTest` and `VectorSearchPerformanceTest`.
- Introduced new JMH-based benchmarks: `SearchBenchmark` and `VectorSearchBenchmark`.
- Updated README files to reflect new benchmarking results and methodologies.
- Enhanced `pom.xml` to include JMH dependencies and configuration for building benchmarks.
- Improved performance measurement granularity with warm/cold query modes.
- Documented performance results and observations in task documentation.